# AA05

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/controller/: mpc_lateral.yaml  mpc_lateral_full_tube.yaml  speed_pid.yaml
configs/experiments/: a2rl_dynamic_vehicle_yas_marina.yaml  mpc_yas_marina_flat.yaml  rl_planner_yas_marina.yaml  (+1 more)
docs/: A2RL_VEHICLE_MODEL.md  ARCHITECTURE.md  CALIBRATION.md  MPC_DESIGN.md  PRD.md  RL_DESIGN.md  ROS_INTEGRATION.md  SPEED_PROFILE_OPTIMIZATION.md  TRACK_MODEL.md  VEHICLE_DYNAMICS.md  VEHICLE_MODEL.md
scripts/: check_chrono_backend.py  download_track_data.py  evaluate_mpc.py  evaluate_rl_planner_policy.py  plot_track.py  process_track.py  render_best_lap_replays.py  run_mpc_lap.py  train_rl_planner_policy.py  train_rl_speed_policy.py  validate_a2rl_vehicle_model.py  watch_rl_planner_policy.py
tests/: test_a2rl_vehicle_config.py  test_actuator_limits.py  test_aero_model.py  test_brake_model.py  test_cli.py  test_config_loader.py  test_corner_progress.py  test_dbw_model.py  test_dynamic_bicycle.py  test_frenet_projection.py  test_frontier.py  test_metrics_format.py  test_mock_backend.py  test_powertrain_model.py  test_profile_optimizer.py  test_reference_generator.py  test_reset_sampling.py  test_rewards.py  test_rl_planner_env.py  test_safety_supervisor.py  test_speed_pid.py  test_speed_profile.py  test_tire_friction_ellipse.py  test_track_geometry.py  test_trail_braking.py  test_training_cli_overrides.py  test_tube_mpc.py  test_vector_training_env.py  test_vehicle_config.py  test_yas_marina_level1.py
(+95 files in other folders)
